spectec/test/elab/neg/ctx-type-already-defined-in-var.t
  $ ./main.exe ctx-type-already-defined-in-var.spectec 2>&1
  error: type already defined
    --> ctx-type-already-defined-in-var.spectec:6:5
    |
  6 | var foo : int
    |     ^^^
    = source: elab
  [1]
